Fix DropDown menu visible by default

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -17,7 +17,7 @@ body, header, footer {
 
 #DropDownMenu
 {
-    visibility: visible;
+    visibility: hidden;
     position: fixed;
     right: 0;
     margin-top: 55px;
